@@ -19,7 +19,7 @@ public:
     static bool FromSVGString(const char str[], SkPath*);
 
     enum class PathEncoding { Absolute, Relative };
-    static void ToSVGString(const SkPath&, SkString*, PathEncoding = PathEncoding::Absolute);
+    static SkString ToSVGString(const SkPath&, PathEncoding = PathEncoding::Absolute);
 };
 
 #endif
